--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Former U.S. Marine, Diesel Mechanic, Bicycle Mechanic, Landscaper; and that's just to name a few. Ready for a new challenge so, let's do this!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Jacksonville, NC, USA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Graphic design, photography and playing soccer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full Stack Web Developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Raleigh, NC, USA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to take my artistic talents to the next level.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/marcuskrueger90">Github</a></li>
         </ul>
     </footer>
 </body>
